updated the file

--- a/r_index.html
+++ b/r_index.html
@@ -24,7 +24,7 @@
         <a href="#menu">Menu</a>
       </li>
       <li class="nav-item">
-        <a href="#shop">Shop</a>
+        <a href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
@@ -34,21 +34,19 @@
       <h1>Tasty buds</h1>
     </header>
     <!--<section class="section-intro" id="reservation">-->
-      
     <div class="link-to-book-wrapper">
-      <a class="link-to-book" href="#reservations">Book a table</a>
+      <a class="link-to-book" href="#reservation">Book a table</a>
     </div></section>
   </section>
-
   <section class="about-section" id="about">
-    <article>
       <h3>
          things which boasts  the restuarant
       </h3>
       <p>
-      Here we go.............
+        Welcome to our restaurant, where we serve exquisite cuisine inspired by the flavors of the world. Our menu features a fusion of international and local dishes, prepared with the freshest ingredients and presented beautifully. Our chefs are passionate about creating culinary delights that will tantalize your taste buds.Whether you're in the mood for something spicy or sweet, our diverse menu has something for everyone. From our mouthwatering appetizers to our decadent desserts, we guarantee that every dish will leave you feeling satisfied and eager for more.Our restaurant also offers a warm and inviting atmosphere, perfect for romantic dinners, family gatherings, or business meetings. Our friendly staff is always ready to serve you with a smile and ensure that you have an unforgettable dining experience. 
+        Here we go.............
       </p>
-    </article>
+    
   </section>
 
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -93,6 +91,10 @@
           <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       </div>
+    </div>
+    </div>
+
+    <section  id="contact">
       <div class="opening-time">
         <h3>
           Opening times
@@ -103,7 +105,7 @@
          <span>Sunday: 10:00 — 17:00</span>
         </p>
       </div>
-      <div class="contact-adress">
+      <div class="contact-adress" >
         <h3>
           Contact
         </h3>
@@ -113,8 +115,7 @@
           <span>Palo-Alto, 1111 CA</span>
         </p>
       </div>
-    </div>
-    </div>
+  </section>
 
 
 
