--- a/r_index.html
+++ b/r_index.html
@@ -51,14 +51,14 @@
 
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://cdn.pixabay.com/photo/2014/09/03/15/05/sandwich-434658__340.jpg" class="d-block w-100" alt="food">
+      <div class="flex-item-left">
+        <img src="https://cdn.pixabay.com/photo/2014/09/03/15/05/sandwich-434658__340.jpg"  alt="food">
       </div>
-      <div class="carousel-item">
-        <img src="https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="food">
+      <div class="flex-item-right">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-ODWBMyo9pZN7ME64zNuLuftLUvIFHpesKw&usqp=CAU" alt="food" >
       </div>
-      <div class="carousel-item">
-        <img src="https://cdn.pixabay.com/photo/2014/09/03/15/05/sandwich-434658__340.jpg" class="d-block w-100" alt="food">
+      <div class="]flex-item-left">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQET2zTiTpffPsUDxioTVaW9vwsJiHOerN1YA&usqp=CAU"  alt="food">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -88,6 +88,9 @@
           <div class="form-group">
             <input type="number" class="form-control" id="exampleInputphoneNumber1" placeholder="Enter your phone number">
           </div>
+          <div class="form-group">
+            <input type="number" class="form-control" id="exampleInputphoneNumber1" placeholder="Leave a note....">
+          </div>
           <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       </div>
@@ -95,14 +98,17 @@
     </div>
 
     <section  id="contact">
-      <div class="opening-time">
+      <div class="container">
+        <div class="column-flex">
+          <div class="flex-column-form">
+            <div class="opening-time">
         <h3>
           Opening times
         </h3>
         <p>
-         <span>Monday—Thursday: 08:00 — 22:00</span> 
-         <span>Friday—Saturday: 09:00 — 23:00 </span>
-         <span>Sunday: 10:00 — 17:00</span>
+         <span>Monday--Thursday: 08:00 — 22:00</span> 
+         <span>Friday--Saturday: 09:00 — 23:00 </span>
+         <span>Fresh---Sunday  : 10:00 — 17:00</span>
         </p>
       </div>
       <div class="contact-adress" >
@@ -115,7 +121,10 @@
           <span>Palo-Alto, 1111 CA</span>
         </p>
       </div>
-  </section>
+    </div>
+  </div>
+</div>
+</section>
 
 
 
