--- a/r_index.html
+++ b/r_index.html
@@ -57,7 +57,7 @@
       <div class="flex-item-right">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-ODWBMyo9pZN7ME64zNuLuftLUvIFHpesKw&usqp=CAU" alt="food" >
       </div>
-      <div class="]flex-item-left">
+      <div class="flex-item-left">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQET2zTiTpffPsUDxioTVaW9vwsJiHOerN1YA&usqp=CAU"  alt="food">
       </div>
     </div>
