Updated the file

--- a/r_index.html
+++ b/r_index.html
@@ -50,8 +50,12 @@
   </section>
 
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="flex-item-left">
+    
+    <div class="carousel-inner" id="menu">
+      <img src="https://cdn.pixabay.com/photo/2014/09/03/15/05/sandwich-434658__340.jpg"  alt="food">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-ODWBMyo9pZN7ME64zNuLuftLUvIFHpesKw&usqp=CAU" alt="food" >
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQET2zTiTpffPsUDxioTVaW9vwsJiHOerN1YA&usqp=CAU"  alt="food">
+      <!-- <div class="flex-item-left">
         <img src="https://cdn.pixabay.com/photo/2014/09/03/15/05/sandwich-434658__340.jpg"  alt="food">
       </div>
       <div class="flex-item-right">
@@ -59,7 +63,7 @@
       </div>
       <div class="flex-item-left">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQET2zTiTpffPsUDxioTVaW9vwsJiHOerN1YA&usqp=CAU"  alt="food">
-      </div>
+      </div> -->
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -108,7 +112,7 @@
         <p>
          <span>Monday--Thursday: 08:00 — 22:00</span> 
          <span>Friday--Saturday: 09:00 — 23:00 </span>
-         <span>Fresh---Sunday  : 10:00 — 17:00</span>
+         <span>Good----Sunday  : 10:00 — 17:00</span>
         </p>
       </div>
       <div class="contact-adress" >
